--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,8 @@
 ---
 disk_device: /dev/sdb
 disk_number: 1
-disk_fs_type: ext4
+disk_name: ''
+disk_fs_type: btrfs
 disk_part_start: 0%
 disk_part_end: 100%
 disk_mount_path: ''
