--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,7 +6,7 @@ disk_fs_type: btrfs
 disk_part_start: 0%
 disk_part_end: 100%
 disk_mount_path: ''
-disk_mount_opts: ''
+disk_mount_opts: 'defaults'
 disk_mount_owner: "{{ ansible_user }}"
 disk_mount_group: "{{ ansible_user }}"
 disk_mount_mode: "750"
