--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,12 +1,12 @@
 ---
 disk_device: /dev/sdb
 disk_number: 1
-disk_name: ''
+disk_name: ""
 disk_fs_type: btrfs
 disk_part_start: 0%
 disk_part_end: 100%
-disk_mount_path: ''
-disk_mount_opts: 'defaults'
-disk_mount_owner: "{{ ansible_user }}"
-disk_mount_group: "{{ ansible_user }}"
-disk_mount_mode: "750"
+disk_mount_path: ""
+disk_mount_opts: defaults
+disk_mount_owner: "{{ ansible_user | default('root') }}"
+disk_mount_group: "{{ ansible_user | default('root') }}"
+disk_mount_mode: 0750
